--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   toast: ^0.1.5
   http: ^0.12.0+2
   curved_navigation_bar: ^0.3.1
+  flutter_swiper: ^1.1.6
+  flutter_vector_icons: ^0.2.1
+  bezier_chart: ^1.0.14
 
 dev_dependencies:
   flutter_test:
